# model_covariates

./: README.md  calendarfeature.py  main.py  prophet_version.py  prophet_version_habilitada_codigo_sujo.py  prophet_version_segura_testada_20250502.py  pyproject.toml  simple_pipeline.py  sktime_version  sktime_version_sonnet37
backup_codes/: sktime_version  sktime_version_gemini25.py  sktime_version_v2  teste.py
data/: future_forecast_prophet.csv  groupby_train.csv  groupby_transactions_2.csv
exports/: components_20250501_133006.csv  forecast_20250501_133006.csv  forecast_20250501_140107.csv  forecast_20250502_155751.csv  prophet_model_20250501_133006.pkl  prophet_model_20250501_140107.pkl  prophet_model_20250502_155751.pkl  regressor_importance_20250501_133006.csv
exports/forecasts/: forecast_future_20250503_123852.csv  forecast_future_20250503_134134.csv  forecast_future_20250504_223903.csv  forecast_future_20250505_092829.csv  forecast_test_20250503_123852.csv  forecast_test_20250503_134134.csv  forecast_test_20250504_223903.csv  forecast_test_20250505_092829.csv  forecast_train_20250503_123852.csv  forecast_train_20250503_134134.csv  forecast_train_20250504_223903.csv  forecast_train_20250505_092829.csv  rolling_forecasts_combined_20250504_223935.csv  rolling_forecasts_combined_20250505_092904.csv
exports/models/: prophet_model_20250503_123852.pkl  prophet_model_20250503_134134.pkl  prophet_model_20250504_223903.pkl  prophet_model_20250505_092829.pkl
