[project]
name = "model-covariates"
version = "0.1.0"
description = ""
authors = [
    {name = "poaa",email = "petterson.oaa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (<2)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "holidays (>=0.71,<0.72)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sktime (>=0.37.0,<0.38.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
